--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,14 @@ body {
   font-family: "Urbanist", sans-serif;
 }
 
+.topContainerOfPages {
+  padding-top: 74px;
+
+  @media (max-width: 580px) {
+    padding-top: 66.5px;
+  }
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -41,12 +49,13 @@ video {
 
 .loadingContainer {
   width: 100%;
-  min-height: 60vh;
+  min-height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 22px;
+  font-size: 24px;
   font-weight: 600;
+  color: #333;
   text-align: center;
 }
 .errorContainer {
