--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,6 +58,17 @@ video {
   color: #333;
   text-align: center;
 }
+.notFoundContainer {
+  width: 100%;
+  min-height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: 600;
+  color: #333;
+  text-align: center;
+}
 .errorContainer {
   width: 100%;
   min-height: 50vh;
